--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
     repositories {
+//        maven { url 'https://maven.google.com' }
         google()
-        jcenter()
+        mavenCentral()
+//        maven { url 'http://jcenter.bintray.com' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.google.gms:google-services:4.3.8'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.0'
     }
 }
 
 allprojects {
     repositories {
-        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.google.com' }
+        maven { url "https://jitpack.io" }
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
